--- a/src/components/MainComponent/MainComponent.css
+++ b/src/components/MainComponent/MainComponent.css
@@ -5,8 +5,10 @@ main {
     background-repeat: no-repeat; 
     background-position: center; 
     background-attachment: fixed;
-    height: auto; 
+    height: 100vh; 
     
   }
+
+  
   
 
