--- a/src/components/MainComponent/MainComponent.css
+++ b/src/components/MainComponent/MainComponent.css
@@ -1,14 +1,44 @@
 main {
-    padding-top: 10rem;
-    background-image: url("https://res.cloudinary.com/dhoq8vx2k/image/upload/v1732905700/ROBOTLIFE/Logo-Robot-Life.webp");
-    background-size: cover; 
-    background-repeat: no-repeat; 
-    background-position: center; 
-    background-attachment: fixed;
-    height: 100vh; 
-    
-  }
+  /*background-image: url("https://res.cloudinary.com/dhoq8vx2k/image/upload/v1732905700/ROBOTLIFE/Logo-Robot-Life.webp");*/
+  
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  height: auto;
+}
 
+
+.carousel {
+  position: relative;
+  width: 100%;
+  height: 700px; 
+  margin: 0 auto;
+  overflow: hidden;
+  background-color: #000; 
   
-  
+}
+
+
+.carousel-slides {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-slide {
+  min-width: 100%;
+  flex-shrink: 0; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.carousel-slide img {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+  object-position: center; 
+}
+
 
