--- a/src/components/DescriptionHomepage/Description.css
+++ b/src/components/DescriptionHomepage/Description.css
@@ -2,4 +2,24 @@
     border-top: 2px solid orange !important;
     border-bottom: 2px solid orange !important;
     margin-top: 150px;
-}
+    padding: 40px; /* Aggiunto un padding uniforme */
+  }
+  
+  @media (max-width: 576px) {
+    .div-description {
+      margin-top: 50px; /* Riduce lo spazio superiore su schermi piccoli */
+      padding: 20px; /* Riduce il padding su schermi piccoli */
+    }
+  
+    .div-description p {
+      font-size: 0.9rem; /* Riduce la dimensione del font */
+      line-height: 1.5; /* Aumenta la leggibilità */
+      margin: 0; /* Rimuove margini eccessivi */
+    }
+  
+    .category-title {
+      font-size: 1.5rem; /* Riduce la dimensione del titolo */
+      margin-bottom: 20px;
+    }
+  }
+  
