--- a/src/components/RegisterUser/RegisterUser.css
+++ b/src/components/RegisterUser/RegisterUser.css
@@ -44,7 +44,7 @@
 
 .term-condition {
     
-    width: 500px;
+    max-width: 500px;
     background-color: rgba(0, 0, 0, 0.7) !important; 
     margin-top: 40px;
     margin-left: 20px;
