--- a/src/components/Nav/Navbar.css
+++ b/src/components/Nav/Navbar.css
@@ -63,3 +63,24 @@ nav ul .text-decoration-none {
     flex-grow: 1;
   }
   
+  input {
+    background-color: rgba(0, 0, 0, 0.5) !important; 
+    color: gold !important; 
+    border: 1px solid rgba(255, 255, 255, 0.2); 
+    padding: 10px; 
+    border-radius: 5px; 
+  }
+
+
+  .custom-confirm-button {
+    background-color: black; 
+    color: gold;             
+    border: none;            
+  }
+  
+  .custom-confirm-button:hover {
+    background-color: #333; 
+    color: gold;
+  }
+  
+  
