--- a/src/Pages/CategoryPages/CategoryPages.css
+++ b/src/Pages/CategoryPages/CategoryPages.css
@@ -5,7 +5,7 @@
     background-repeat: no-repeat; 
     background-position: center; 
     background-attachment: fixed;
-    height: auto; 
+    min-height: 100vh; 
     
   }
 
