--- a/src/Pages/Details/Details.css
+++ b/src/Pages/Details/Details.css
@@ -41,7 +41,7 @@
   }
     
   .comments-container {
-    max-height: 300px;
+    height: 300px;
     overflow-y: auto;
     padding-right: 10px; 
   }
