--- a/src/Pages/CategoryPages/CategoryPages.css
+++ b/src/Pages/CategoryPages/CategoryPages.css
@@ -1,6 +1,6 @@
 .category-page {
     padding-top: 10rem;
-    background-image: url("https://res.cloudinary.com/dhoq8vx2k/image/upload/v1732905700/ROBOTLIFE/Logo-Robot-Life.webp");
+    background-color: rgba(30, 29, 29, 0.93);
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center; 
