--- a/src/Pages/Details/Details.css
+++ b/src/Pages/Details/Details.css
@@ -73,9 +73,13 @@
     }
   
     @media (max-width: 576px) {
+
+      
       .img-product-details {
-        width: 250px;
-        height: 100px;
+        width: 350px;
+        height: 300px;
+        margin-left: 23px;
+        
         
         
       }
@@ -85,10 +89,15 @@
         padding-bottom: 1rem;
         
       }
+
+      .thumbnail-container {
+        margin-left: 2rem;
+      }
   
       .thumbnail-image {
         width: 60px;
         height: auto;
+        
         
       }
 
@@ -103,6 +112,9 @@
 
 @media (orientation: landscape) and (max-width: 990px) {
   .div-descript {
-    margin-top: 0;
+    margin-top: 11rem;
+  }
+  .div-image-side {
+    margin-top: 9rem;
   }
 }    
